--- a/src/main/resources/regression/msmarco-v2-doc.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-doc-v2
+name: msmarco-v2-doc
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -7,7 +7,7 @@ topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: MsMarcoDocV2Collection
+collection: MsMarcoV2DocCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
 index_options:
@@ -59,15 +59,15 @@ input_roots:
   - /store/      # on orca
   - /scratch2/   # on damiano
 input: collections/msmarco/msmarco_v2_doc
-index_path: indexes/lucene-index.msmarco-doc-v2.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-v2-doc.pos+docvectors+raw
 index_stats:
   documents: 11959635
   documents (non-empty): 11959635
   total terms: 14165661202
 topics:
-  - name: "[MS MARCO Doc V2: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-doc-v2.dev.txt
-    qrel: qrels.msmarco-doc-v2.dev.txt
+  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-doc.dev.txt
+    qrel: qrels.msmarco-v2-doc.dev.txt
 models:
   - name: bm25-default
     display: BM25 (default)
