--- a/src/main/resources/regression/msmarco-v2-passage-augmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-augmented.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-doc-v2-segmented
+name: msmarco-v2-passage-augmented
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -7,7 +7,7 @@ topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: MsMarcoDocV2Collection
+collection: MsMarcoV2PassageCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
 index_options:
@@ -58,46 +58,44 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco_v2_doc_segmented
-index_path: indexes/lucene-index.msmarco-doc-v2-segmented.pos+docvectors+raw
+input: collections/msmarco/msmarco_v2_passage_augmented
+index_path: indexes/lucene-index.msmarco-v2-passage-augmented.pos+docvectors+raw
 index_stats:
-  documents: 124131414
-  documents (non-empty): 124131414
-  total terms: 24780915974
+  documents: 138364198
+  documents (non-empty): 138364198
+  total terms: 15272964956
 topics:
-  - name: "[MS MARCO Doc V2: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-doc-v2.dev.txt
-    qrel: qrels.msmarco-doc-v2.dev.txt
+  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-passage.dev.txt
+    qrel: qrels.msmarco-v2-passage.dev.txt
 models:
   - name: bm25-default
     display: BM25 (default)
     params:
       - -bm25
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.1875
+        - 0.0863
       MRR@100:
-        - 0.1896
+        - 0.0872
       R@100:
-        - 0.6555
+        - 0.4030
       R@1000:
-        - 0.8542
+        - 0.6925
   - name: bm25-default+rm3
     display: +RM3
     params:
       - -bm25
       - -rm3
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.1648
+        - 0.0669
       MRR@100:
-        - 0.1664
+        - 0.0674
       R@100:
-        - 0.6558
+        - 0.3734
       R@1000:
-        - 0.8605
+        - 0.6859
   - name: bm25-default+ax
     display: +Ax
     params:
@@ -105,28 +103,26 @@ models:
       - -axiom
       - -axiom.deterministic
       - -rerankCutoff 20
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.1344
+        - 0.0431
       MRR@100:
-        - 0.1360
+        - 0.0434
       R@100:
-        - 0.5593
+        - 0.2998
       R@1000:
-        - 0.8161
+        - 0.5887
   - name: bm25-default+prf
     display: +PRF
     params:
       - -bm25
       - -bm25prf
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.1528
+        - 0.0542
       MRR@100:
-        - 0.1547
+        - 0.0547
       R@100:
-        - 0.5945
+        - 0.3338
       R@1000:
-        - 0.8270
+        - 0.6157
