--- a/src/main/resources/docgen/templates/msmarco-v2-passage.template
+++ b/src/main/resources/docgen/templates/msmarco-v2-passage.template
@@ -15,7 +15,7 @@ ${index_cmds}
 ```
 
 The directory `/path/to/msmarco-v2-passage/` should be a directory containing the compressed `jsonl` files that comprise the corpus.
-See [this page](experiments-v2-msmarco.md) for additional details.
+See [this page](experiments-msmarco-v2.md) for additional details.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
