--- a/src/main/resources/regression/msmarco-passage-unicoil-tilde-expansion.yaml
+++ b/src/main/resources/regression/msmarco-passage-unicoil-tilde-expansion.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-passage-deepimpact
+name: msmarco-passage-unicoil-tilde-expansion
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -46,26 +46,26 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco-passage-deepimpact-b8/
-index_path: indexes/lucene-index.msmarco-passage-deepimpact
+input: collections/msmarco/msmarco-passage-unicoil-tilde-expansion-b8/
+index_path: indexes/lucene-index.msmarco-passage-unicoil-tilde-expansion
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
-  total terms: 35455908214
+  total terms: 73040108576
 topics:
   - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
-    path: topics.msmarco-passage.dev-subset.deepimpact.tsv.gz
+    path: topics.msmarco-passage.dev-subset.unicoil-tilde-expansion.tsv.gz
     qrel: qrels.msmarco-passage.dev-subset.txt
 models:
-  - name: deepimpact
-    display: DeepImpact
+  - name: unicoil
+    display: uniCOIL
     params:
       - -impact -pretokenized
     results:
       map:
-        - 0.3334
+        - 0.3560
       mrr:
-        - 0.3386
+        - 0.3606
       R@1000:
-        - 0.9476
+        - 0.9646
 
