--- a/src/main/resources/docgen/templates/msmarco-passage-deepimpact.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-deepimpact.template
@@ -55,7 +55,7 @@ python tools/scripts/msmarco/convert_trec_to_msmarco_run.py \
    --output runs/run.msmarco-passage-deepimpact.deepimpact.topics.msmarco-passage.dev-subset.deepimpact.tsv.gz.msmarco --quiet
 
 python tools/scripts/msmarco/msmarco_passage_eval.py \
-   collections/msmarco-passage/qrels.dev.small.tsv \
+   tools/topics-and-qrels/qrels.msmarco-passage.dev-subset.txt \
    runs/run.msmarco-passage-deepimpact.deepimpact.topics.msmarco-passage.dev-subset.deepimpact.tsv.gz.msmarco
 ```
 
