--- a/src/main/resources/regression/msmarco-passage-distill-splade-max.yaml
+++ b/src/main/resources/regression/msmarco-passage-distill-splade-max.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-passage-unicoil
+name: msmarco-passage-distill-splade-max
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -46,26 +46,26 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco-passage-unicoil-b8/
-index_path: indexes/lucene-index.msmarco-passage-unicoil
+input: collections/msmarco/msmarco-passage-distill-splade-max/
+index_path: indexes/lucene-index.msmarco-passage-distill-splade-max
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
-  total terms: 44495093768
+  total terms: 95445422483
 topics:
   - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
-    path: topics.msmarco-passage.dev-subset.unicoil.tsv.gz
+    path: topics.msmarco-passage.dev-subset.distill-splade-max.tsv.gz
     qrel: qrels.msmarco-passage.dev-subset.txt
 models:
   - name: unicoil
-    display: uniCOIL w/ doc2query-T5 expansion
+    display: uniCOIL
     params:
       - -impact -pretokenized
     results:
       map:
-        - 0.3574
+        - 0.3746
       mrr:
-        - 0.3625
+        - 0.3798
       R@1000:
-        - 0.9582
+        - 0.9787
 
