--- a/src/main/resources/regression/msmarco-passage-distill-splade-max.yaml
+++ b/src/main/resources/regression/msmarco-passage-distill-splade-max.yaml
@@ -57,8 +57,8 @@ topics:
     path: topics.msmarco-passage.dev-subset.distill-splade-max.tsv.gz
     qrel: qrels.msmarco-passage.dev-subset.txt
 models:
-  - name: unicoil
-    display: uniCOIL
+  - name: distill-splade-max
+    display: DistilSPLADE-max
     params:
       - -impact -pretokenized
     results:
