--- a/src/main/resources/docgen/templates/msmarco-passage-distill-splade-max.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-distill-splade-max.template
@@ -51,12 +51,12 @@ In order to reproduce results reported in the paper, we need to convert to MS MA
 
 ```bash
 python tools/scripts/msmarco/convert_trec_to_msmarco_run.py \
-   --input runs/run.msmarco-passage-distill-splade-max.unicoil.topics.msmarco-passage.dev-subset.distill-splade-max.tsv.gz \
-   --output runs/run.msmarco-passage-distill-splade-max.unicoil.topics.msmarco-passage.dev-subset.distill-splade-max.tsv.gz.msmarco --quiet
+   --input runs/run.msmarco-passage-distill-splade-max.distill-splade-max.topics.msmarco-passage.dev-subset.distill-splade-max.tsv.gz \
+   --output runs/run.msmarco-passage-distill-splade-max.distill-splade-max.topics.msmarco-passage.dev-subset.distill-splade-max.tsv.gz.msmarco --quiet
 
 python tools/scripts/msmarco/msmarco_passage_eval.py \
    tools/topics-and-qrels/qrels.msmarco-passage.dev-subset.txt \
-   runs/run.msmarco-passage-distill-splade-max.unicoil.topics.msmarco-passage.dev-subset.distill-splade-max.tsv.gz.msmarco
+   runs/run.msmarco-passage-distill-splade-max.distill-splade-max.topics.msmarco-passage.dev-subset.distill-splade-max.tsv.gz.msmarco
 ```
 
 The results should be as follows:
