--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,7 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Upload to Codecov
+        env:
+          CODECOV_TOKEN: $
+        run: bash <(curl -s https://codecov.io/bash)
