--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,5 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Upload to Codecov
-        env:
-          CODECOV_TOKEN: $
-        run: bash <(curl -s https://codecov.io/bash)
+    - uses: codecov/codecov-action@v2      
+      # https://github.com/codecov/codecov-action
