--- a/src/main/resources/docgen/templates/msmarco-doc-per-passage-v2.template
+++ b/src/main/resources/docgen/templates/msmarco-doc-per-passage-v2.template
@@ -9,10 +9,10 @@ Note that there are four different regression conditions for this task, and this
 In the passage indexing condition, we select the score of the highest-scoring passage from a document as the score for that document to produce a document ranking; this is known as the MaxP technique.
 All four conditions are described in detail [here](https://github.com/castorini/docTTTTTquery#reproducing-ms-marco-document-ranking-results-with-anserini), in the context of doc2query-T5.
 
-**NOTE**: This is the `msmarco-doc-per-passage` variant (there's also `msmarco-doc-per-passage-v2` and `msmarco-doc-per-passage-v3`), see [this page](experiments-msmarco-doc-doc2query-details.md) for detailed notes about differences between these variants.
+**NOTE**: This is the `msmarco-doc-per-passage-v2` variant (there's also `msmarco-doc-per-passage` and `msmarco-doc-per-passage-v3`), see [this page](experiments-msmarco-doc-doc2query-details.md) for detailed notes about differences between these variants.
 
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/msmarco-doc-per-passage.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/msmarco-doc-per-passage.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/msmarco-doc-per-passage-v2.yaml).
+Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/msmarco-doc-per-passage-v2.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
@@ -67,18 +67,18 @@ To generate an MS MARCO submission with the BM25 default parameters, correspondi
 ```bash
 $ target/appassembler/bin/SearchCollection -topicreader TsvString \
    -topics src/main/resources/topics-and-qrels/topics.msmarco-doc.dev.txt \
-   -index indexes/lucene-index.msmarco-doc-per-passage.pos+docvectors+raw \
-   -output runs/run.msmarco-doc-per-passage.bm25-default.trec \
+   -index indexes/lucene-index.msmarco-doc-per-passage-v2.pos+docvectors+raw \
+   -output runs/run.msmarco-doc-per-passage-v2.bm25-default.trec \
    -bm25 -bm25.k1 0.9 -bm25.b 0.4 -hits 1000 \
    -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
 
 $ python tools/scripts/msmarco/convert_trec_to_msmarco_run.py \
-   --input runs/run.msmarco-doc-per-passage.bm25-default.trec \
-   --output runs/run.msmarco-doc-per-passage.bm25-default.txt
+   --input runs/run.msmarco-doc-per-passage-v2.bm25-default.trec \
+   --output runs/run.msmarco-doc-per-passage-v2.bm25-default.txt
 
 $ python tools/scripts/msmarco/msmarco_doc_eval.py \
    --judgments src/main/resources/topics-and-qrels/qrels.msmarco-doc.dev.txt \
-   --run runs/run.msmarco-doc-per-passage.bm25-default.txt
+   --run runs/run.msmarco-doc-per-passage-v2.bm25-default.txt
 
 #####################
 MRR @100: 0.2682349308946578
@@ -93,23 +93,21 @@ To generate an MS MARCO submission with the BM25 tuned parameters, corresponding
 ```bash
 $ target/appassembler/bin/SearchCollection -topicreader TsvString \
    -topics src/main/resources/topics-and-qrels/topics.msmarco-doc.dev.txt \
-   -index indexes/lucene-index.msmarco-doc-per-passage.pos+docvectors+raw \
-   -output runs/run.msmarco-doc-per-passage.bm25-tuned.trec \
+   -index indexes/lucene-index.msmarco-doc-per-passage-v2.pos+docvectors+raw \
+   -output runs/run.msmarco-doc-per-passage-v2.bm25-tuned.trec \
    -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 1000 \
    -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
 
 $ python tools/scripts/msmarco/convert_trec_to_msmarco_run.py \
-   --input runs/run.msmarco-doc-per-passage.bm25-tuned.trec \
-   --output runs/run.msmarco-doc-per-passage.bm25-tuned.txt
+   --input runs/run.msmarco-doc-per-passage-v2.bm25-tuned.trec \
+   --output runs/run.msmarco-doc-per-passage-v2.bm25-tuned.txt
 
 $ python tools/scripts/msmarco/msmarco_doc_eval.py \
    --judgments src/main/resources/topics-and-qrels/qrels.msmarco-doc.dev.txt \
-   --run runs/run.msmarco-doc-per-passage.bm25-tuned.txt
+   --run runs/run.msmarco-doc-per-passage-v2.bm25-tuned.txt
 
 #####################
 MRR @100: 0.2751202109946902
 QueriesRanked: 5193
 #####################
 ```
-
-This run corresponds to the MS MARCO document ranking leaderboard entry "Anserini's BM25 (per passage), parameters tuned for recall@100 (k1=2.16, b=0.61)" dated 2021/01/20, and is reported in the Lin et al. (SIGIR 2021) Pyserini paper.
