--- a/src/main/resources/docgen/templates/msmarco-doc-per-passage.template
+++ b/src/main/resources/docgen/templates/msmarco-doc-per-passage.template
@@ -68,13 +68,9 @@ To generate an MS MARCO submission with the BM25 default parameters, correspondi
 $ target/appassembler/bin/SearchCollection -topicreader TsvString \
    -topics src/main/resources/topics-and-qrels/topics.msmarco-doc.dev.txt \
    -index indexes/lucene-index.msmarco-doc-per-passage.pos+docvectors+raw \
-   -output runs/run.msmarco-doc-per-passage.bm25-default.trec \
+   -output runs/run.msmarco-doc-per-passage.bm25-default.txt -format msmarco \
    -bm25 -bm25.k1 0.9 -bm25.b 0.4 -hits 1000 \
    -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
-
-$ python tools/scripts/msmarco/convert_trec_to_msmarco_run.py \
-   --input runs/run.msmarco-doc-per-passage.bm25-default.trec \
-   --output runs/run.msmarco-doc-per-passage.bm25-default.txt
 
 $ python tools/scripts/msmarco/msmarco_doc_eval.py \
    --judgments src/main/resources/topics-and-qrels/qrels.msmarco-doc.dev.txt \
@@ -87,6 +83,7 @@ QueriesRanked: 5193
 ```
 
 This run was _not_ submitted to the MS MARCO document ranking leaderboard, but is reported in the Lin et al. (SIGIR 2021) Pyserini paper.
+Note that the above command uses `-format msmarco` instead of first outputting in TREC format and then converting to MS MARCO format using `tools/scripts/msmarco/convert_trec_to_msmarco_run.py`; both yield the exact same results.
 
 To generate an MS MARCO submission with the BM25 tuned parameters, corresponding to "BM25 (tuned)" above:
 
@@ -94,13 +91,9 @@ To generate an MS MARCO submission with the BM25 tuned parameters, corresponding
 $ target/appassembler/bin/SearchCollection -topicreader TsvString \
    -topics src/main/resources/topics-and-qrels/topics.msmarco-doc.dev.txt \
    -index indexes/lucene-index.msmarco-doc-per-passage.pos+docvectors+raw \
-   -output runs/run.msmarco-doc-per-passage.bm25-tuned.trec \
+   -output runs/run.msmarco-doc-per-passage.bm25-tuned.txt -format msmarco \
    -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 1000 \
    -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
-
-$ python tools/scripts/msmarco/convert_trec_to_msmarco_run.py \
-   --input runs/run.msmarco-doc-per-passage.bm25-tuned.trec \
-   --output runs/run.msmarco-doc-per-passage.bm25-tuned.txt
 
 $ python tools/scripts/msmarco/msmarco_doc_eval.py \
    --judgments src/main/resources/topics-and-qrels/qrels.msmarco-doc.dev.txt \
@@ -113,3 +106,4 @@ QueriesRanked: 5193
 ```
 
 This run corresponds to the MS MARCO document ranking leaderboard entry "Anserini's BM25 (per passage), parameters tuned for recall@100 (k1=2.16, b=0.61)" dated 2021/01/20, and is reported in the Lin et al. (SIGIR 2021) Pyserini paper.
+Note that the above command uses `-format msmarco` instead of first outputting in TREC format and then converting to MS MARCO format using `tools/scripts/msmarco/convert_trec_to_msmarco_run.py`; both yield the exact same results.
