--- a/src/main/resources/regression/dl21-passage-augmented.yaml
+++ b/src/main/resources/regression/dl21-passage-augmented.yaml
@@ -21,19 +21,30 @@ evals:
       - -M 100
       - -m map
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
-    metric: map
+    metric: MAP@100
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -M 100
       - -m recip_rank
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: MRR@100
+    metric_precision: 4
+    can_combine: true
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
+    params:
+      - -m ndcg_cut.10
+      - -c
+    separator: "\t"
+    parse_index: 2
+    metric: NDCG@10
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -58,44 +69,48 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco_v2_passage_augmented
+input: collections/msmarco/msmarco_v2_passage
 index_path: indexes/lucene-index.msmarco-v2-passage-augmented.pos+docvectors+raw
 index_stats:
   documents: 138364198
   documents (non-empty): 138364198
   total terms: 15272964956
 topics:
-  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-v2-passage.dev.txt
-    qrel: qrels.msmarco-v2-passage.dev.txt
+  - name: "[DL21 (Doc)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+    path: topics.dl21.txt
+    qrel: qrels.dl21-passage.txt
 models:
   - name: bm25-default
     display: BM25 (default)
     params:
       - -bm25
     results:
-      map:
-        - 0.0863
+      MAP@100:
+        - 0.0977
       MRR@100:
-        - 0.0872
+        - 0.5303
+      NDCG@10:
+        - 0.3977
       R@100:
-        - 0.4030
+        - 0.2704
       R@1000:
-        - 0.6925
+        - 0.5875
   - name: bm25-default+rm3
     display: +RM3
     params:
       - -bm25
       - -rm3
     results:
-      map:
-        - 0.0669
+      MAP@100:
+        - 0.1050
       MRR@100:
-        - 0.0674
+        - 0.4906
+      NDCG@10:
+        - 0.3906
       R@100:
-        - 0.3734
+        - 0.2737
       R@1000:
-        - 0.6859
+        - 0.6209
   - name: bm25-default+ax
     display: +Ax
     params:
@@ -104,25 +119,29 @@ models:
       - -axiom.deterministic
       - -rerankCutoff 20
     results:
-      map:
-        - 0.0431
+      MAP@100:
+        - 0.0849
       MRR@100:
-        - 0.0434
+        - 0.4269
+      NDCG@10:
+        - 0.2927
       R@100:
-        - 0.2998
+        - 0.2481
       R@1000:
-        - 0.5887
+        - 0.5819
   - name: bm25-default+prf
     display: +PRF
     params:
       - -bm25
       - -bm25prf
     results:
-      map:
-        - 0.0542
+      MAP@100:
+        - 0.0959
       MRR@100:
-        - 0.0547
+        - 0.4737
+      NDCG@10:
+        - 0.3488
       R@100:
-        - 0.3338
+        - 0.2661
       R@1000:
-        - 0.6157
+        - 0.5852
