--- a/src/main/resources/regression/dl21-passage.yaml
+++ b/src/main/resources/regression/dl21-passage.yaml
@@ -21,19 +21,30 @@ evals:
       - -M 100
       - -m map
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
-    metric: map
+    metric: MAP@100
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -M 100
       - -m recip_rank
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: MRR@100
+    metric_precision: 4
+    can_combine: true
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
+    params:
+      - -m ndcg_cut.10
+      - -c
+    separator: "\t"
+    parse_index: 2
+    metric: NDCG@10
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -65,37 +76,41 @@ index_stats:
   documents (non-empty): 138364197
   total terms: 4673266762
 topics:
-  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-v2-passage.dev.txt
-    qrel: qrels.msmarco-v2-passage.dev.txt
+  - name: "[DL21 (Doc)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+    path: topics.dl21.txt
+    qrel: qrels.dl21-passage.txt
 models:
   - name: bm25-default
     display: BM25 (default)
     params:
       - -bm25
     results:
-      map:
-        - 0.0709
+      MAP@100:
+        - 0.1357
       MRR@100:
-        - 0.0719
+        - 0.5060
+      NDCG@10:
+        - 0.4458
       R@100:
-        - 0.3397
+        - 0.3332
       R@1000:
-        - 0.5733
+        - 0.6113
   - name: bm25-default+rm3
     display: +RM3
     params:
       - -bm25
       - -rm3
     results:
-      map:
-        - 0.0611
+      MAP@100:
+        - 0.1632
       MRR@100:
-        - 0.0619
+        - 0.4925
+      NDCG@10:
+        - 0.4480
       R@100:
-        - 0.3377
+        - 0.3381
       R@1000:
-        - 0.5933
+        - 0.6611
   - name: bm25-default+ax
     display: +Ax
     params:
@@ -104,25 +119,29 @@ models:
       - -axiom.deterministic
       - -rerankCutoff 20
     results:
-      map:
-        - 0.0592
+      MAP@100:
+        - 0.1907
       MRR@100:
-        - 0.0601
+        - 0.5733
+      NDCG@10:
+        - 0.4851
       R@100:
-        - 0.3482
+        - 0.3577
       R@1000:
-        - 0.6064
+        - 0.6785
   - name: bm25-default+prf
     display: +PRF
     params:
       - -bm25
       - -bm25prf
     results:
-      map:
-        - 0.0595
+      MAP@100:
+        - 0.1821
       MRR@100:
-        - 0.0607
+        - 0.5532
+      NDCG@10:
+        - 0.4740
       R@100:
-        - 0.3495
+        - 0.3535
       R@1000:
-        - 0.5968
+        - 0.6531
