--- a/src/main/resources/regression/dl21-passage-augmented.yaml
+++ b/src/main/resources/regression/dl21-passage-augmented.yaml
@@ -37,7 +37,7 @@ evals:
     parse_index: 2
     metric: MRR@100
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m ndcg_cut.10
@@ -46,11 +46,12 @@ evals:
     parse_index: 2
     metric: NDCG@10
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m recall.100
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: R@100
@@ -60,6 +61,7 @@ evals:
     params:
       - -m recall.1000
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: R@1000
@@ -92,9 +94,9 @@ models:
       NDCG@10:
         - 0.3977
       R@100:
-        - 0.2704
+        - 0.2709
       R@1000:
-        - 0.5875
+        - 0.5835
   - name: bm25-default+rm3
     display: +RM3
     params:
@@ -108,9 +110,9 @@ models:
       NDCG@10:
         - 0.3906
       R@100:
-        - 0.2737
+        - 0.2795
       R@1000:
-        - 0.6209
+        - 0.6268
   - name: bm25-default+ax
     display: +Ax
     params:
@@ -126,9 +128,9 @@ models:
       NDCG@10:
         - 0.2927
       R@100:
-        - 0.2481
+        - 0.2645
       R@1000:
-        - 0.5819
+        - 0.6085
   - name: bm25-default+prf
     display: +PRF
     params:
@@ -142,6 +144,6 @@ models:
       NDCG@10:
         - 0.3488
       R@100:
-        - 0.2661
+        - 0.2729
       R@1000:
-        - 0.5852
+        - 0.5952
