--- a/src/main/resources/regression/dl21-passage-augmented.yaml
+++ b/src/main/resources/regression/dl21-passage-augmented.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-v2-doc
+name: msmarco-v2-passage-augmented
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -7,7 +7,7 @@ topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: MsMarcoV2DocCollection
+collection: MsMarcoV2PassageCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
 index_options:
@@ -21,25 +21,37 @@ evals:
       - -M 100
       - -m map
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
-    metric: map
+    metric: MAP@100
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -M 100
       - -m recip_rank
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: MRR@100
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
+    params:
+      - -m ndcg_cut.10
+      - -c
+    separator: "\t"
+    parse_index: 2
+    metric: NDCG@10
+    metric_precision: 4
+    can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m recall.100
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: R@100
@@ -49,6 +61,7 @@ evals:
     params:
       - -m recall.1000
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: R@1000
@@ -58,44 +71,48 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco_v2_doc
-index_path: indexes/lucene-index.msmarco-v2-doc.pos+docvectors+raw
+input: collections/msmarco/msmarco_v2_passage
+index_path: indexes/lucene-index.msmarco-v2-passage-augmented.pos+docvectors+raw
 index_stats:
-  documents: 11959635
-  documents (non-empty): 11959635
-  total terms: 14165661202
+  documents: 138364198
+  documents (non-empty): 138364198
+  total terms: 15272964956
 topics:
-  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-v2-doc.dev.txt
-    qrel: qrels.msmarco-v2-doc.dev.txt
+  - name: "[DL21 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+    path: topics.dl21.txt
+    qrel: qrels.dl21-passage.txt
 models:
   - name: bm25-default
     display: BM25 (default)
     params:
       - -bm25
     results:
-      map:
-        - 0.1552
+      MAP@100:
+        - 0.0977
       MRR@100:
-        - 0.1572
+        - 0.5303
+      NDCG@10:
+        - 0.3977
       R@100:
-        - 0.5956
+        - 0.2709
       R@1000:
-        - 0.8054
+        - 0.5835
   - name: bm25-default+rm3
     display: +RM3
     params:
       - -bm25
       - -rm3
     results:
-      map:
-        - 0.0966
+      MAP@100:
+        - 0.1050
       MRR@100:
-        - 0.0974
+        - 0.4906
+      NDCG@10:
+        - 0.3906
       R@100:
-        - 0.5121
+        - 0.2795
       R@1000:
-        - 0.7694
+        - 0.6268
   - name: bm25-default+ax
     display: +Ax
     params:
@@ -104,25 +121,29 @@ models:
       - -axiom.deterministic
       - -rerankCutoff 20
     results:
-      map:
-        - 0.0665
+      MAP@100:
+        - 0.0849
       MRR@100:
-        - 0.0675
+        - 0.4269
+      NDCG@10:
+        - 0.2927
       R@100:
-        - 0.4075
+        - 0.2645
       R@1000:
-        - 0.6852
+        - 0.6085
   - name: bm25-default+prf
     display: +PRF
     params:
       - -bm25
       - -bm25prf
     results:
-      map:
-        - 0.0834
+      MAP@100:
+        - 0.0959
       MRR@100:
-        - 0.0845
+        - 0.4737
+      NDCG@10:
+        - 0.3488
       R@100:
-        - 0.4681
+        - 0.2729
       R@1000:
-        - 0.7385
+        - 0.5952
