--- a/src/main/resources/regression/msmarco-v2-doc-segmented-dev2.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-dev2.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-v2-passage
+name: msmarco-v2-doc-segmented-dev2
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -7,13 +7,13 @@ topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: MsMarcoV2PassageCollection
+collection: MsMarcoV2DocCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
 index_options:
-  - -storePositions
+#  - -storePositions
   - -storeDocvectors
-  - -storeRaw
+#  - -storeRaw
 topic_reader: TsvInt
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -58,44 +58,46 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco_v2_passage
-index_path: indexes/lucene-index.msmarco-v2-passage.pos+docvectors+raw
+input: collections/msmarco/msmarco_v2_doc_segmented
+index_path: indexes/lucene-index.msmarco-v2-doc-segmented.pos+docvectors+raw
 index_stats:
-  documents: 138364198
-  documents (non-empty): 138364197
-  total terms: 4673266762
+  documents: 124131414
+  documents (non-empty): 124131414
+  total terms: 24780915974
 topics:
-  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-v2-passage.dev.txt
-    qrel: qrels.msmarco-v2-passage.dev.txt
+  - name: "[MS MARCO V2 Doc: Dev2](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-doc.dev2.txt
+    qrel: qrels.msmarco-v2-doc.dev2.txt
 models:
   - name: bm25-default
     display: BM25 (default)
     params:
       - -bm25
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.0709
+        - 0.1903
       MRR@100:
-        - 0.0719
+        - 0.1930
       R@100:
-        - 0.3397
+        - 0.6629
       R@1000:
-        - 0.5733
+        - 0.8549
   - name: bm25-default+rm3
     display: +RM3
     params:
       - -bm25
       - -rm3
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.0611
+        - 0.1679
       MRR@100:
-        - 0.0619
+        - 0.1701
       R@100:
-        - 0.3377
+        - 0.6561
       R@1000:
-        - 0.5933
+        - 0.8633
   - name: bm25-default+ax
     display: +Ax
     params:
@@ -103,26 +105,28 @@ models:
       - -axiom
       - -axiom.deterministic
       - -rerankCutoff 20
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.0592
+        - 0.1345
       MRR@100:
-        - 0.0601
+        - 0.1366
       R@100:
-        - 0.3482
+        - 0.5800
       R@1000:
-        - 0.6064
+        - 0.8210
   - name: bm25-default+prf
     display: +PRF
     params:
       - -bm25
       - -bm25prf
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.0595
+        - 0.1565
       MRR@100:
-        - 0.0607
+        - 0.1587
       R@100:
-        - 0.3495
+        - 0.6134
       R@1000:
-        - 0.5968
+        - 0.8280
