--- a/src/main/resources/docgen/templates/msmarco-v2-doc-segmented-unicoil-noexp-0shot-dev2.template
+++ b/src/main/resources/docgen/templates/msmarco-v2-doc-segmented-unicoil-noexp-0shot-dev2.template
@@ -1,8 +1,7 @@
 # Anserini: Regressions for [MS MARCO (V2) Document Ranking](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)
 
-This page describes regression experiments for document ranking _on the segmented version_ of the MS MARCO (V2) document corpus using the dev queries, which is integrated into Anserini's regression testing framework.
-Here, we cover bag-of-words baselines.
-For more complete instructions on how to run end-to-end experiments, refer to [this page](experiments-msmarco-v2.md).
+This page describes regression experiments for document ranking _on the segmented version_ of the MS MARCO (V2) document corpus using the dev2 queries, which is integrated into Anserini's regression testing framework.
+Here, we cover experiments with the uniCOIL model trained on the MS MARCO V1 passage ranking test collection, applied in a zero-shot manner, with no document expansion.
 
 The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/msmarco-v2-doc-segmented-dev.yaml).
 Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/msmarco-v2-doc-segmented-dev.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
