--- a/src/main/resources/regression/dl21-doc-segmented-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/dl21-doc-segmented-unicoil-noexp-0shot.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-v2-doc-segmented-unicoil-noexp-0shot-dev
+name: dl21-doc-segmented-unicoil-noexp-0shot
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -22,9 +22,9 @@ evals:
       - -c
     separator: "\t"
     parse_index: 2
-    metric: map
+    metric: MAP@100
     metric_precision: 4
-    can_combine: true
+    can_combine: no
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -M 100
@@ -33,6 +33,15 @@ evals:
     separator: "\t"
     parse_index: 2
     metric: MRR@100
+    metric_precision: 4
+    can_combine: true
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
+    params:
+      - -m ndcg_cut.10
+      - -c
+    separator: "\t"
+    parse_index: 2
+    metric: NDCG@10
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -64,9 +73,9 @@ index_stats:
   documents (non-empty): 124131404
   total terms: 805830282591
 topics:
-  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-v2-doc.dev.unicoil-noexp.0shot.tsv.gz
-    qrel: qrels.msmarco-v2-doc.dev.txt
+  - name: "[DL21 (Doc)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+    path: topics.dl21.unicoil-noexp.0shot.tsv.gz
+    qrel: qrels.dl21-doc.txt
 models:
   - name: unicoil-noexp-0shot
     display: uniCOIL (no expansion, zero-shot)
@@ -75,11 +84,13 @@ models:
       - -pretokenized
       - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.2050
+      MAP@100:
+        - 0.2475
       MRR@100:
-        - 0.2069
+        - 0.9122
+      NDCG@10:
+        - 0.6282
       R@100:
-        - 0.7198
+        - 0.3497
       R@1000:
-        - 0.8854
+        - 0.6767
