--- a/src/main/resources/regression/dl21-passage-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/dl21-passage-unicoil-noexp-0shot.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-v2-doc-segmented-unicoil-noexp-0shot-dev
+name: dl21-passage-unicoil-noexp-0shot
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -20,25 +20,37 @@ evals:
       - -M 100
       - -m map
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
-    metric: map
+    metric: MAP@100
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -M 100
       - -m recip_rank
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: MRR@100
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
+    params:
+      - -m ndcg_cut.10
+      - -c
+    separator: "\t"
+    parse_index: 2
+    metric: NDCG@10
+    metric_precision: 4
+    can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m recall.100
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: R@100
@@ -48,6 +60,7 @@ evals:
     params:
       - -m recall.1000
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: R@1000
@@ -57,29 +70,30 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco-doc-v2-seg-unicoil-noexp-0shot-b8
-index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-noexp-0shot
+input: collections/msmarco/msmarco-passage-v2-unicoil-noexp-0shot-b8
+index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-noexp-0shot
 index_stats:
-  documents: 124131404
-  documents (non-empty): 124131404
-  total terms: 805830282591
+  documents: 138364198
+  documents (non-empty): 138364198
+  total terms: 411330032512
 topics:
-  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-v2-doc.dev.unicoil-noexp.0shot.tsv.gz
-    qrel: qrels.msmarco-v2-doc.dev.txt
+  - name: "[DL21 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+    path: topics.dl21.unicoil-noexp.0shot.tsv.gz
+    qrel: qrels.dl21-passage.txt
 models:
   - name: unicoil-noexp-0shot
     display: uniCOIL (no expansion, zero-shot)
     params:
       - -impact
       - -pretokenized
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.2050
+      MAP@100:
+        - 0.2193
       MRR@100:
-        - 0.2069
+        - 0.6991
+      NDCG@10:
+        - 0.5756
       R@100:
-        - 0.7198
+        - 0.4246
       R@1000:
-        - 0.8854
+        - 0.6897
