--- a/src/main/resources/regression/msmarco-v2-passage-unicoil-noexp-0shot-dev2.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-unicoil-noexp-0shot-dev2.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-v2-doc-segmented-unicoil-noexp-0shot-dev
+name: msmarco-v2-passage-unicoil-noexp-0shot-dev2
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -57,29 +57,28 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco-doc-v2-seg-unicoil-noexp-0shot-b8
-index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-noexp-0shot
+input: collections/msmarco/msmarco-passage-v2-unicoil-noexp-0shot-b8
+index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-noexp-0shot
 index_stats:
-  documents: 124131404
-  documents (non-empty): 124131404
-  total terms: 805830282591
+  documents: 138364198
+  documents (non-empty): 138364198
+  total terms: 411330032512
 topics:
-  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-v2-doc.dev.unicoil-noexp.0shot.tsv.gz
-    qrel: qrels.msmarco-v2-doc.dev.txt
+  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-passage.dev2.unicoil-noexp.0shot.tsv.gz
+    qrel: qrels.msmarco-v2-passage.dev2.txt
 models:
   - name: unicoil-noexp-0shot
     display: uniCOIL (no expansion, zero-shot)
     params:
       - -impact
       - -pretokenized
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.2050
+        - 0.1374
       MRR@100:
-        - 0.2069
+        - 0.1385
       R@100:
-        - 0.7198
+        - 0.5217
       R@1000:
-        - 0.8854
+        - 0.7114
