--- a/src/main/resources/docgen/templates/msmarco-v2-doc.template
+++ b/src/main/resources/docgen/templates/msmarco-v2-doc.template
@@ -1,11 +1,11 @@
 # Anserini: Regressions for [MS MARCO (V2) Document Ranking](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)
 
-This page describes regression experiments for document ranking _on the segmented version_ of the MS MARCO (V2) document corpus using the dev2 queries, which is integrated into Anserini's regression testing framework.
+This page describes regression experiments for document ranking on the MS MARCO (V2) document corpus using the dev queries, which is integrated into Anserini's regression testing framework.
 Here, we cover bag-of-words baselines.
 For more complete instructions on how to run end-to-end experiments, refer to [this page](experiments-msmarco-v2.md).
 
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/msmarco-v2-doc-segmented-dev2.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/msmarco-v2-doc-segmented-dev2.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/msmarco-v2-doc.yaml).
+Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/msmarco-v2-doc.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
@@ -15,7 +15,7 @@ Typical indexing command:
 ${index_cmds}
 ```
 
-The directory `/path/to/msmarco-v2-doc-segmented/` should be a directory containing the compressed `jsonl` files that comprise the corpus.
+The directory `/path/to/msmarco-v2-doc/` should be a directory containing the compressed `jsonl` files that comprise the corpus.
 See [this page](experiments-msmarco-v2.md) for additional details.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
@@ -23,7 +23,7 @@ For additional details, see explanation of [common indexing options](common-inde
 ## Retrieval
 
 Topics and qrels are stored in [`src/main/resources/topics-and-qrels/`](../src/main/resources/topics-and-qrels/).
-These regression experiments use the [dev queries](../src/main/resources/topics-and-qrels/topics.msmarco-v2-doc.dev.txt).
+These regression experiments use the [dev queries](../src/main/resources/topics-and-qrels/topics.msmarco-v2-doc.dev.txt) and the [dev2 queries](../src/main/resources/topics-and-qrels/topics.msmarco-v2-doc.dev2.txt).
 
 After indexing has completed, you should be able to perform retrieval as follows:
 
