--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-noexp-0shot.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-v2-passage-unicoil-noexp-0shot-dev2
+name: msmarco-v2-doc-segmented-unicoil-noexp-0shot
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -22,7 +22,7 @@ evals:
       - -c
     separator: "\t"
     parse_index: 2
-    metric: map
+    metric: MAP
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -57,28 +57,36 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco-passage-v2-unicoil-noexp-0shot-b8
-index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-noexp-0shot
+input: collections/msmarco/msmarco-doc-v2-seg-unicoil-noexp-0shot-b8
+index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-noexp-0shot
 index_stats:
-  documents: 138364198
-  documents (non-empty): 138364198
-  total terms: 411330032512
+  documents: 124131404
+  documents (non-empty): 124131404
+  total terms: 805830282591
 topics:
-  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-v2-passage.dev2.unicoil-noexp.0shot.tsv.gz
-    qrel: qrels.msmarco-v2-passage.dev2.txt
+  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-doc.dev.unicoil-noexp.0shot.tsv.gz
+    qrel: qrels.msmarco-v2-doc.dev.txt
+  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-doc.dev2.unicoil-noexp.0shot.tsv.gz
+    qrel: qrels.msmarco-v2-doc.dev2.txt
 models:
   - name: unicoil-noexp-0shot
     display: uniCOIL (no expansion, zero-shot)
     params:
       - -impact
       - -pretokenized
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.1374
+      MAP:
+        - 0.2050
+        - 0.2082
       MRR@100:
-        - 0.1385
+        - 0.2069
+        - 0.2098
       R@100:
-        - 0.5217
+        - 0.7198
+        - 0.7266
       R@1000:
-        - 0.7114
+        - 0.8854
+        - 0.8899
