--- a/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-v2-doc-dev2
+name: msmarco-v2-doc-segmented
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -11,9 +11,9 @@ collection: MsMarcoV2DocCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
 index_options:
-#  - -storePositions
+  - -storePositions
   - -storeDocvectors
-#  - -storeRaw
+  - -storeRaw
 topic_reader: TsvInt
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -23,7 +23,7 @@ evals:
       - -c
     separator: "\t"
     parse_index: 2
-    metric: map
+    metric: MAP
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -58,13 +58,16 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco_v2_doc
-index_path: indexes/lucene-index.msmarco-v2-doc.pos+docvectors+raw
+input: collections/msmarco/msmarco_v2_doc_segmented
+index_path: indexes/lucene-index.msmarco-v2-doc-segmented.pos+docvectors+raw
 index_stats:
-  documents: 11959635
-  documents (non-empty): 11959635
-  total terms: 14165661202
+  documents: 124131414
+  documents (non-empty): 124131414
+  total terms: 24780915974
 topics:
+  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-doc.dev.txt
+    qrel: qrels.msmarco-v2-doc.dev.txt
   - name: "[MS MARCO V2 Doc: Dev2](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
     path: topics.msmarco-v2-doc.dev2.txt
     qrel: qrels.msmarco-v2-doc.dev2.txt
@@ -73,29 +76,39 @@ models:
     display: BM25 (default)
     params:
       - -bm25
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.1639
+      MAP:
+        - 0.1875
+        - 0.1903
       MRR@100:
-        - 0.1659
+        - 0.1896
+        - 0.1930
       R@100:
-        - 0.5970
+        - 0.6555
+        - 0.6629
       R@1000:
-        - 0.8029
+        - 0.8542
+        - 0.8549
   - name: bm25-default+rm3
     display: +RM3
     params:
       - -bm25
       - -rm3
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.1011
+      MAP:
+        - 0.1648
+        - 0.1679
       MRR@100:
-        - 0.1028
+        - 0.1664
+        - 0.1701
       R@100:
-        - 0.5245
+        - 0.6558
+        - 0.6561
       R@1000:
-        - 0.7736
+        - 0.8605
+        - 0.8633
   - name: bm25-default+ax
     display: +Ax
     params:
@@ -103,26 +116,36 @@ models:
       - -axiom
       - -axiom.deterministic
       - -rerankCutoff 20
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.0722
+      MAP:
+        - 0.1344
+        - 0.1345
       MRR@100:
-        - 0.0733
+        - 0.1360
+        - 0.1366
       R@100:
-        - 0.4192
+        - 0.5593
+        - 0.5800
       R@1000:
-        - 0.6960
+        - 0.8161
+        - 0.8210
   - name: bm25-default+prf
     display: +PRF
     params:
       - -bm25
       - -bm25prf
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.0876
+      MAP:
+        - 0.1528
+        - 0.1565
       MRR@100:
-        - 0.0892
+        - 0.1547
+        - 0.1587
       R@100:
-        - 0.4831
+        - 0.5945
+        - 0.6134
       R@1000:
-        - 0.7482
+        - 0.8270
+        - 0.8280
