--- a/src/main/resources/regression/msmarco-v2-passage.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-v2-doc-segmented
+name: msmarco-v2-passage
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -7,7 +7,7 @@ topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: MsMarcoV2DocCollection
+collection: MsMarcoV2PassageCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
 index_options:
@@ -23,7 +23,7 @@ evals:
       - -c
     separator: "\t"
     parse_index: 2
-    metric: map
+    metric: MAP
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -58,46 +58,55 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco_v2_doc_segmented
-index_path: indexes/lucene-index.msmarco-v2-doc-segmented.pos+docvectors+raw
+input: collections/msmarco/msmarco_v2_passage
+index_path: indexes/lucene-index.msmarco-v2-passage.pos+docvectors+raw
 index_stats:
-  documents: 124131414
-  documents (non-empty): 124131414
-  total terms: 24780915974
+  documents: 138364198
+  documents (non-empty): 138364197
+  total terms: 4673266762
 topics:
-  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-v2-doc.dev.txt
-    qrel: qrels.msmarco-v2-doc.dev.txt
+  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-passage.dev.txt
+    qrel: qrels.msmarco-v2-passage.dev.txt
+  - name: "[MS MARCO V2 Passage: Dev2](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-passage.dev2.txt
+    qrel: qrels.msmarco-v2-passage.dev2.txt
 models:
   - name: bm25-default
     display: BM25 (default)
     params:
       - -bm25
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.1875
+      MAP:
+        - 0.0709
+        - 0.0794
       MRR@100:
-        - 0.1896
+        - 0.0719
+        - 0.0802
       R@100:
-        - 0.6555
+        - 0.3397
+        - 0.3459
       R@1000:
-        - 0.8542
+        - 0.5733
+        - 0.5839
   - name: bm25-default+rm3
     display: +RM3
     params:
       - -bm25
       - -rm3
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.1648
+      MAP:
+        - 0.0611
+        - 0.0647
       MRR@100:
-        - 0.1664
+        - 0.0619
+        - 0.0654
       R@100:
-        - 0.6558
+        - 0.3377
+        - 0.3435
       R@1000:
-        - 0.8605
+        - 0.5933
+        - 0.6049
   - name: bm25-default+ax
     display: +Ax
     params:
@@ -105,28 +114,34 @@ models:
       - -axiom
       - -axiom.deterministic
       - -rerankCutoff 20
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.1344
+      MAP:
+        - 0.0592
+        - 0.0642
       MRR@100:
-        - 0.1360
+        - 0.0601
+        - 0.0647
       R@100:
-        - 0.5593
+        - 0.3482
+        - 0.3554
       R@1000:
-        - 0.8161
+        - 0.6064
+        - 0.6254
   - name: bm25-default+prf
     display: +PRF
     params:
       - -bm25
       - -bm25prf
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      map:
-        - 0.1528
+      MAP:
+        - 0.0595
+        - 0.0632
       MRR@100:
-        - 0.1547
+        - 0.0607
+        - 0.0640
       R@100:
-        - 0.5945
+        - 0.3495
+        - 0.3595
       R@1000:
-        - 0.8270
+        - 0.5968
+        - 0.6169
